feat: add new table and all logic for it
