# backend/internal/domain/entity/enums.go
@@ -3,6 +3,8 @@ package entity
 type PaymentType string
 type PaymentStatus string
 type BookingStatus string
+type ScheduleSlotStatus string
+type SlotType string
 type UserRole string
 
 const (
@@ -17,6 +19,14 @@ const (
 	BookingStatusConfirmed BookingStatus = "confirmed"
 	BookingStatusCompleted BookingStatus = "completed"
 	BookingStatusCanceled  BookingStatus = "canceled"
+
+	ScheduleSlotStatusBooked   ScheduleSlotStatus = "booked"
+	ScheduleSlotStatusFree     ScheduleSlotStatus = "free"
+	ScheduleSlotStatusBusy     ScheduleSlotStatus = "busy"
+	ScheduleSlotStatusReserved ScheduleSlotStatus = "reserved"
+
+	SlotManual SlotType = "manual"
+	SlotAuto   SlotType = "auto"
 
 	UserRoleMaster UserRole = "master"
 	UserRoleClient UserRole = "client"
